# cctv-uploader

./: .env.example  Dockerfile  database.dbml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: .env.example  Dockerfile  docker-compose.yml  drizzle.config.ts  package.json
api/src/: api.ts  migrate.ts  seed.ts
api/src/config/: index.ts
api/src/constants/: messages.ts  roles.ts
api/src/logger/: index.ts
api/src/middlewares/: auth.middleware.ts  cors.middleware.ts  error.middleware.ts  logging.middleware.ts  role.middleware.ts
api/src/router/: index.ts
api/src/types/: jwt.types.ts  request.types.ts  (+1 more)
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py
app/db/: __init__.py  models.py  schema.sql  session.py
app/models/: __init__.py  requests.py
app/repositories/: __init__.py  camera_repository.py
app/services/: __init__.py  ffmpeg_processor.py  hikvision_client.py  segment_downloader.py  uploader.py  utils.py  worker.py
worker/: .env.example  Dockerfile  README.md  config.py  encryption.py  main.py  pyproject.toml
worker/api/: app.py  routes.py  schemas.py
worker/db/: session.py
worker/db/models/: __init__.py  batch_job.py  batch_job_item.py  camera.py  enums.py  mini_clip.py  packing_item.py  workstation.py
worker/jobs/: batch_processor.py  job_queue.py
worker/repositories/: batch_job_repository.py  camera_repository.py  mini_clip_repository.py  packing_repository.py
worker/services/: ffmpeg_processor.py  hikvision_client.py  segment_downloader.py  uploader.py  utils.py
(+66 files in other folders)
